--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini AI 여행 앨범 메이커</title>
+    <title>AI 여행 앨범 메이커</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
                  </button>
                 <div class="flex items-center space-x-2 sm:space-x-3">
                     <svg class="w-7 h-7 sm:w-8 sm:h-8 text-sky-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.5 19H9a7 7 0 1 1 6.71-9h1.79a4.5 4.5 0 1 1 0 9Z"/><path d="m15 12-3 3 3 3"/></svg>
-                    <h1 class="text-xl sm:text-2xl font-bold text-slate-700">Gemini AI 여행 앨범 메이커</h1>
+                    <h1 class="text-xl sm:text-2xl font-bold text-slate-700">AI 여행 앨범 메이커</h1>
                 </div>
             </div>
             <button id="export-button" class="hidden bg-sky-500 hover:bg-sky-600 text-white font-bold py-2 px-3 sm:px-5 rounded-lg transition-all duration-300 shadow-md hover:shadow-lg flex items-center space-x-2">
