--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
             <main class="flex-grow flex flex-col relative transition-all duration-500 w-full overflow-y-auto custom-scrollbar" id="main-content">
                 
                 <!-- Upload Section -->
-                <div id="upload-section" class="w-full h-full flex flex-col items-center justify-center text-white" style="background-image: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?q=80&w=2070&auto=format&fit=crop'); background-size: cover; background-position: center;">
-                    <div class="absolute inset-0 bg-black bg-opacity-40"></div>
-                    <div id="drag-area" class="relative z-10 text-center bg-white/20 backdrop-blur-md rounded-2xl p-8 sm:p-12 transition-all duration-300 border border-white/30 hover:border-white/60">
+                <div id="upload-section" class="w-full h-full flex flex-col items-center justify-center text-white" style="background-image: url('https://images.unsplash.com/photo-1528543606781-2f6e6857f318?q=80&w=1965&auto=format&fit=crop'); background-size: cover; background-position: center;">
+                    <div id="drag-area" class="relative z-10 text-center bg-black/20 backdrop-blur-sm rounded-2xl p-8 sm:p-12 transition-all duration-300 border border-white/30 hover:border-white/60 w-11/12 max-w-2xl">
                         <div class="flex flex-col items-center space-y-4">
                              <svg class="w-16 h-16 sm:w-20 sm:h-20 text-white opacity-80" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
                             </svg>
-                            <h2 class="text-2xl sm:text-3xl font-bold">흩어진 여행의 조각들을, 하나의 추억으로</h2>
+                            <h2 class="text-2xl sm:text-3xl font-bold text-white">흩어진 여행의 조각들을, 하나의 추억으로</h2>
                             <p class="text-lg text-white/90">이곳을 클릭하거나 사진을 끌어다 놓으세요</p>
                             <input type="file" id="file-input" multiple accept="image/*" class="hidden">
                             <label for="file-input" class="cursor-pointer absolute inset-0"></label>
