--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                              <svg class="w-16 h-16 sm:w-20 sm:h-20 text-white opacity-80" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
                             </svg>
-                            <h2 class="text-2xl sm:text-3xl font-bold text-white">흩어진 여행의 조각들을, 하나의 추억으로</h2>
+                            <h2 class="text-xl sm:text-2xl font-bold text-white">흩어진 여행의 조각들을, 하나의 추억으로</h2>
                             <p class="text-lg text-white/90">이곳을 클릭하거나 사진을 끌어다 놓으세요</p>
                             <input type="file" id="file-input" multiple accept="image/*" class="hidden">
                             <label for="file-input" class="cursor-pointer absolute inset-0"></label>
@@ -113,7 +113,7 @@
                 </div>
 
                 <!-- This wrapper will contain progress and gallery -->
-                <div id="content-wrapper" class="hidden w-full h-full p-4 sm:p-8">
+                <div id="content-wrapper" class="hidden w-full h-full p-4 sm:p-8 flex flex-col">
                     <!-- Progress Section -->
                     <div id="progress-section" class="hidden w-full max-w-lg mx-auto text-center my-auto">
                         <div class="flex items-center justify-center space-x-3 mb-4">
@@ -434,7 +434,17 @@
         
         // --- Gemini AI Analysis ---
         async function analyzeImageWithGemini(imageSrc, mimeType) {
-            const apiKey = ""; // This will be handled by the execution environment.
+            // =================================================================
+            // 중요: 여기에 개인 API 키를 붙여넣으세요.
+            // Google AI Studio (https://aistudio.google.com/app/apikey)에서 무료로 발급받을 수 있습니다.
+            const apiKey = "AIzaSyBKZPfJmtHZSyRborFvXpa5C5Ew5rd9vGs";
+            // =================================================================
+
+            if (apiKey === "AIzaSyBKZPfJmtHZSyRborFvXpa5C5Ew5rd9vGs" || apiKey === "") {
+                 console.error("API 키가 설정되지 않았습니다. AI 분석을 건너뜁니다.");
+                 throw new Error("API key not set");
+            }
+
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             const base64Data = imageSrc.split(',')[1];
