--- a/index.html
+++ b/index.html
@@ -437,10 +437,10 @@
             // =================================================================
             // 중요: 여기에 개인 API 키를 붙여넣으세요.
             // Google AI Studio (https://aistudio.google.com/app/apikey)에서 무료로 발급받을 수 있습니다.
-            const apiKey = "AIzaSyBKZPfJmtHZSyRborFvXpa5C5Ew5rd9vGs";
+            const apiKey = "여기에_발급받은_API_키를_붙여넣으세요";
             // =================================================================
 
-            if (apiKey === "AIzaSyBKZPfJmtHZSyRborFvXpa5C5Ew5rd9vGs" || apiKey === "") {
+            if (apiKey === "여기에_발급받은_API_키를_붙여넣으세요" || apiKey === "") {
                  console.error("API 키가 설정되지 않았습니다. AI 분석을 건너뜁니다.");
                  throw new Error("API key not set");
             }
