--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
         // --- Gemini AI Analysis ---
         async function analyzeImageWithGemini(imageSrc, mimeType) {
             // 임시 테스트용 API 키입니다. 나중에 개인 키로 교체해주세요.
-            const apiKey = "API_KEY";
+            const apiKey = "AIzaSyC3bC6tj0YgIgxtilrG1m0lMRXXMK19Ujk";
 
-            if (apiKey === "API_KEY" || apiKey === "") {
+            if (apiKey === "AIzaSyC3bC6tj0YgIgxtilrG1m0lMRXXMK19Ujk" || apiKey === "") {
                  console.error("API 키가 설정되지 않았습니다. AI 분석을 건너뜁니다.");
                  throw new Error("API key not set");
             }
